--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "homepage": "https://github.com/melkzsiqueira/toxicity-analysis-backend#readme",
     "dependencies": {
         "@xenova/transformers": "^2.17.2",
+        "axios": "^1.8.4",
         "cors": "^2.8.5",
         "express": "^4.21.2"
     },
     "devDependencies": {
+        "@types/axios": "^0.9.36",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/node": "^22.12.0",
